--- a/packages/mdast-react-render/package.json
+++ b/packages/mdast-react-render/package.json
@@ -2,8 +2,12 @@
   "name": "mdast-react-render",
   "version": "0.0.0",
   "description": "render mdast nodes according to a schema",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "prepublishOnly": "npm run prebuild && npm run build",
+    "prebuild": "rimraf lib",
+    "build": "babel src --out-dir lib",
+    "dev": "babel -w src --out-dir lib",
     "test": "echo \"Error: no test specified\" && exit 0"
   },
   "repository": {
@@ -15,5 +19,13 @@
   "bugs": {
     "url": "https://github.com/orbiting/mdast/issues"
   },
-  "homepage": "https://github.com/orbiting/mdast#readme"
+  "homepage": "https://github.com/orbiting/mdast#readme",
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "rimraf": "^2.6.2"
+  }
 }
