--- a/packages/mdast-react-render/package.json
+++ b/packages/mdast-react-render/package.json
@@ -25,6 +25,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "babel-tape-runner": "^2.0.1",
     "enzyme": "^3.1.1",
     "enzyme-adapter-react-16": "^1.0.4",
