--- a/packages/template-newsletter/package.json
+++ b/packages/template-newsletter/package.json
@@ -31,7 +31,7 @@
     "enzyme-adapter-react-16": "^1.0.4",
     "faucet": "0.0.1",
     "glamor": "^2.20.40",
-    "mdast-react-render": "^0.1.1",
+    "mdast-react-render": "^1.0.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "rimraf": "^2.6.2",
@@ -40,8 +40,8 @@
   "peerDependencies": {
     "d3-time-format": "^2.1.0",
     "glamor": "^2.20.40",
-    "mdast-react-render": "^0.1.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "mdast-react-render": "^1.0.0",
+    "react": ">=16",
+    "react-dom": ">=16"
   }
 }
