fix: unify method signature to allow index and parent forwarding
affects: slate-mdast-serializer

inconsistent fromMdast and toMdast method made it impossible to correctly
forward index and parent
information to child serializers

BREAKING CHANGE:
- signatur of `instance.toMdast` and `instance.fromMdast` changed
  `toMdast (node, context, onNoRule)` becomes
  `toMdast (node, index, parent, {context, onNoRule})`
  `fromMdast (node, context, onNoRule)` becomes
  `fromMdast (node, index, parent, {context, onNoRule})`
- `fromMdast` and `toMdast` now get called with an object as 4th argument
  `fn(node, index, parent, visitChildren, context)` becomes
  `fn(node, index, parent, {visitChildren, context})`

--- a/packages/slate-mdast-serializer/package.json
+++ b/packages/slate-mdast-serializer/package.json
@@ -32,7 +32,7 @@
     "tape": "^4.8.0"
   },
   "peerDependencies": {
-    "slate": "^0.30.6"
+    "slate": ">=0.30.6"
   },
   "dependencies": {
     "js-yaml": "^3.10.0",
