--- a/packages/slate-mdast-serializer/package.json
+++ b/packages/slate-mdast-serializer/package.json
@@ -2,6 +2,9 @@
   "name": "slate-mdast-serializer",
   "version": "1.0.0",
   "description": "serialize slate to mdast and vice versa",
+  "keywords": [
+    "slate", "mdast", "serializer", "markdown", "md", "serialization", "schema"
+  ],
   "main": "lib/index.js",
   "scripts": {
     "prepublish": "npm run prebuild && npm run build",
