--- a/packages/mdast-react-render/package.json
+++ b/packages/mdast-react-render/package.json
@@ -1,9 +1,15 @@
 {
   "name": "mdast-react-render",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "render mdast nodes according to a schema",
   "keywords": [
-    "mdast", "react", "render", "markdown", "md", "schema", "email"
+    "mdast",
+    "react",
+    "render",
+    "markdown",
+    "md",
+    "schema",
+    "email"
   ],
   "main": "lib/index.js",
   "scripts": {
