--- a/packages/slate-mdast-serializer/package.json
+++ b/packages/slate-mdast-serializer/package.json
@@ -38,11 +38,11 @@
     "faucet": "0.0.1",
     "immutable": "^3.8.2",
     "rimraf": "^2.6.2",
-    "slate": "^0.30.6",
+    "slate": ">=0.32",
     "tape": "^4.8.0"
   },
   "peerDependencies": {
-    "slate": ">=0.30.6"
+    "slate": ">=0.32"
   },
   "dependencies": {
     "lodash.isequal": "^4.5.0"
